# HyperOCM

./: .gitmodules  Makefile  README.md  _CoqProject  coq-hyperocm.opam  dune-project
examples/: ComplexSum.v
src/: META.hyperocm  ZXsum.v  dune  graph.ml  hypercaml_interface.ml  hypercaml_interface.mlpack  hypergraph.v  match.ml  tensorexpression.v
theories/: FSetExtra.v  HypercamlInterface.v  HypercamlTesting.v  ListExtra.v  Summable.v  TensorExpr.v  TensorExprToGraph.v  TensorExprToRocq.v  UTest.v  dune  hypercaml_testing.v  hypergraph.v  hypergraph_compat.v  hypergraph_immutable.v  hypergraph_immutable_compat.v  hypergraph_immutable_testing.v  hypergraph_testing.v  tensor_to_camlgraph.v  tensor_to_ltac_graph.v  tensorexpr_realize.v  tensorexpr_to_camlgraph.v  tensorexpression.v  tensorexpression_int.v
theories/Deprecated/: hypergraph_compat.v  hypergraph_immutable.v  hypergraph_immutable_compat.v  hypergraph_immutable_testing.v  hypergraph_testing.v  tensor_to_camlgraph.v  tensor_to_ltac_graph.v  tensorexpr_to_camlgraph.v
theories/Utility/: FSetExtra.v  ListExtra.v  PrintingExtra.v  UTest.v
